--- a/.github/workflows/tx-hammer-plugins.yml
+++ b/.github/workflows/tx-hammer-plugins.yml
@@ -35,15 +35,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: ${{ inputs.gem_name  }}
-      - name: Install Transifex dependencies
-        run: |
-          sudo apt-get -y install gettext
 
-      - name: "Install Transifex"
-        run: |
-          curl -o- https://raw.githubusercontent.com/transifex/cli/master/install.sh | bash
-          sudo mv tx /usr/local/bin/
-          sudo chown -R runner:runner /usr/local/bin
+      # - name: Install Transifex dependencies
+      #   run: |
+      #     sudo apt-get -y install gettext
+
+      # - name: "Install Transifex"
+      #   run: |
+      #     curl -o- https://raw.githubusercontent.com/transifex/cli/master/install.sh | bash
+      #     sudo mv tx /usr/local/bin/
+      #     sudo chown -R runner:runner /usr/local/bin
 
       - name: Configure plugin
         run: |
@@ -55,49 +56,50 @@ jobs:
           token = ${{ secrets.tx_token  }}
           EOF
 
-      - name: Set up Ruby
-        uses: ruby/setup-ruby@v1
-        with:
-          ruby-version: "2.7"
-          bundler-cache: true
-          working-directory: ${{ inputs.gem_name  }}
-      - name: Set up Git
-        run: |
-          git config user.name "Foreman Translation action"
-          git config user.email "noreply@foreman.example.com"
+      # - name: Set up Ruby
+      #   uses: ruby/setup-ruby@v1
+      #   with:
+      #     ruby-version: "2.7"
+      #     bundler-cache: true
+      #     working-directory: ${{ inputs.gem_name  }}
+      # - name: Set up Git
+      #   run: |
+      #     git config user.name "Foreman Translation action"
+      #     git config user.email "noreply@foreman.example.com"
 
-          git checkout -b $branch_name
+      #     git checkout -b $branch_name
 
-          echo ".tx/*" >> .gitignore
-          echo "vendor/*" >> .gitignore
+      #     echo ".tx/*" >> .gitignore
+      #     echo "vendor/*" >> .gitignore
 
-      - name: Pull translations
-        env:
-          TX_TOKEN: ${{ secrets.tx_token  }}
-        run: |
-          bundle exec rake tx:update
+      # - name: Pull translations
+      #   env:
+      #     TX_TOKEN: ${{ secrets.tx_token  }}
+      #   run: |
+      #     bundle exec rake tx:update
 
-      - name: Check for the changes
-        run: |
-          if ! [ -n "$(git diff ${{ github.ref_name }})" ]; then
-            echo '###'
-            echo '### No changes.'
-            echo '### Exiting ...'
-            echo '###'
-            exit 1
-          fi
+      # - name: Check for the changes
+      #   run: |
+      #     if ! [ -n "$(git diff ${{ github.ref_name }})" ]; then
+      #       echo '###'
+      #       echo '### No changes.'
+      #       echo '### Exiting ...'
+      #       echo '###'
+      #       exit 1
+      #     fi
 
       # - name: Push changes and create a pull request
       #   run: |
       #     git push --set-upstream origin $branch_name
       #     gh pr create --title "Translations" --body "Updated translation files"
-        env:
-          GH_TOKEN: ${{ secrets.gh_token }}
+        # env:
+        #   GH_TOKEN: ${{ secrets.gh_token }}
       - name: Open a PR
         uses: peter-evans/create-pull-request@v5
         with:
           branch: "$branch_name"
           title: "Update translations"
           body: ''
+          commit: 'My super message'
           delete-branch: true
           path: ${{ inputs.gem_name  }}
